k8s/base/gateway/httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web
spec:
  parentRefs:
    - name: brdgme
      sectionName: web
  hostnames:
    - brdg.me
  rules:
    - backendRefs:
        - name: web
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-legacy
spec:
  parentRefs:
    - name: brdgme
      sectionName: web-legacy
  hostnames:
    - legacy.brdg.me
  rules:
    - backendRefs:
        - name: web-legacy
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api
spec:
  parentRefs:
    - name: brdgme
      sectionName: api
  hostnames:
    - api.brdg.me
  rules:
    - backendRefs:
        - name: api
          port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: websocket
spec:
  parentRefs:
    - name: brdgme
      sectionName: websocket
  hostnames:
    - ws.brdg.me
  rules:
    - backendRefs:
        - name: websocket
          port: 80
